--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,10 +6,129 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starter</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+   integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+   crossorigin=""/>
+   <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.css"/>
+   <style>
+       #mapid { height: 90vh; }
+   </style>
+   
 </head>
-<body class="bg-blue-400">
-    
-    Tailwind Node Express and EJS starter
+<body>
+    <div class="m-3" id="mapid"></div>
+    <button onclick="getdata()" class="bg-green-400 cursor-pointer m-4 rounded p-3" >Get data</button>
 
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.js"></script>
+    <script>
+
+    var mymap = new L.map('mapid',{drawControl: true}).setView([51.505, -0.09], 13);
+        L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+        attribution: 'Agroweather',
+        maxZoom: 20,
+        id: 'mapbox/satellite-v9',
+        tileSize: 512,
+        zoomOffset: -1,
+        accessToken: 'pk.eyJ1Ijoicml0ZXNoa3IiLCJhIjoiY2tzYWN0czB5M3JhZzJxbXN3cnhwZG05MyJ9.GoYXZc7nSySWsMCvLyO71w'
+    }).addTo(mymap);
+
+    let data = mymap.on('draw:created',function (e) {
+        console.log(e.layer._latlngs);
+        let latlong = L.polygon(e.layer._latlngs).addTo(mymap);
+        document.getElementById('lat-long').value=e.layer._latlngs;
+        return e.layer._latlngs;
+    });
+    console.log(data);
+
+    const getdata = async ()=>{
+        const res = await fetch('http://api.agromonitoring.com/agro/1.0/polygons?appid=7aab8b8f813c852f1282ac4b242b5db2',{
+        method: "POST",
+        headers: {
+            Accept: "application/json",
+            "Content-Type": "application/json"
+        },
+        body: {
+            "name":"Polygon Sample",
+            "geo_json":{
+                "type":"Feature",
+                "properties":{
+
+                },
+                "geometry":{
+                    "type":"Polygon",
+                    "coordinates":data
+                }
+            }
+            }
+      });
+      const  response = await res.json();
+      console.log(response);
+    }  
+        
+    var polygon = L.polygon([
+        [51.509, -0.08],
+        [51.503, -0.06],
+        [51.51, -0.047],
+        [51.517075, -0.063888]
+    ]).addTo(mymap);
+
+    var popup = L.popup();
+
+    function onMapClick(e) {
+        popup
+            .setLatLng(e.latlng)
+            .setContent("You clicked the map at " + e.latlng.toString())
+            .openOn(mymap);
+    }
+
+    mymap.on('click', onMapClick);
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+    // document.getElementById("get-data").addEventListener("click", function() {
+    //     const res = await fetch('/data',{
+    //         method: "POST",
+    //         headers: {
+    //             Accept: "application/json",
+    //             "Content-Type": "application/json"
+    //         },
+    //         body: JSON.stringify({'lat-long':data})
+    //     });
+    //     const response = await res.json();
+    // });
+          
+    // function onMapClick(e) {
+    //     document.getElementById('lat-long').innerHTML=e.latlng;
+    // }
+
+    // mymap.on('click', onMapClick);
+
+
+    
+
+    // var mapboxgl = require('mapbox-gl/dist/mapbox-gl.js');
+    // mapboxgl.accessToken = 'pk.eyJ1Ijoicml0ZXNoa3IiLCJhIjoiY2tzYWN0czB5M3JhZzJxbXN3cnhwZG05MyJ9.GoYXZc7nSySWsMCvLyO71w';
+    // var map = new mapboxgl.Map({
+    // container: 'YOUR_CONTAINER_ELEMENT_ID',
+    // style: 'mapbox://styles/mapbox/streets-v11'
+    // });
+    </script>
 </body>
 </html>
